[workspace]
members = [
    "cms-countersignature",
    "cms-verifier",
    "maalik", "mock-countersignature",
]
resolver = "3"

[workspace.dependencies]
cms = { version = "0.3.0-pre.0" }
cms-countersignature = { version = "0.1.0" }
certval = { version = "0.1.4", default-features = false }
der = { version = "0.8.0-rc.7", features = ["oid"] }
digest = { version = "0.11.0-rc.0", default-features = false }
error_set = "0.8"
mock-countersignature = "0.1.0" 
p256 = "0.14.0-pre.9"
rand = "0.9"
sha2 = { version = "0.11.0-rc.0", default-features = false, features = ["oid"] }
tracing-subscriber = { version = "0.3" }
thiserror = { version = "2", default-features = false }
x509-cert = { version = "0.3.0-rc.1" }
x509-tsp = "0.2.0-pre"

[patch.crates-io]
cms-countersignature = { path = "./cms-countersignature" }
cms-verifier = { path = "./cms-verifier" }
mock-countersignature = { path = "./mock-countersignature" }

cmpv2     = { git = "https://github.com/RustCrypto/formats.git" }
crmf      = { git = "https://github.com/RustCrypto/formats.git" }
x509-ocsp = { git = "https://github.com/RustCrypto/formats.git" }
x509-tsp  = { git = "https://github.com/RustCrypto/formats.git" }

cms        = { path = "../formats/cms" }
der        = { path = "../formats/der" }
der_derive = { path = "../formats/der_derive" }
x509-cert  = { path = "../formats/x509-cert" }

certval = { git = "https://github.com/baloo/rust-pki.git", branch = "baloo/bump-2025-08-03" }

ecdsa = { git = "https://github.com/RustCrypto/signatures.git" }

primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
