[package]
name = "mock-countersignature"
version = "0.1.0"
edition = "2024"

[dependencies]
cms = { workspace = true, features = ["builder"] }
der.workspace = true
digest.workspace = true
error_set = { workspace = true, features = ["tracing"] }
p256.workspace = true
rand.workspace = true
sha2 = { workspace = true, default-features = true }
x509-cert.workspace = true
x509-tsp.workspace = true
